@@ -73,6 +73,9 @@
 	#if ($utils.hasInvocationCount($testResult))
 		<span class="description"><b>$messages.getString("invocationCount"): </b><font color='blue'>$utils.getInvocationCount($testResult)</font></span><br>
 	#end
+	#if ($utils.hasTimeOut($testResult))
+		<span class="description"><b>$messages.getString("timeOut"): </b><font color='blue'>$utils.getTimeOut($testResult)</font></span><br>
+	#end
 	<span class="duration"><b>$messages.getString("duration"): </b>$utils.formatDuration($testResult.startMillis,$testResult.endMillis)s</span><br>
 	</td>
 	<td class="result">
