@@ -1,6 +1,7 @@
 V2.4.0 * New Results menu. Results per Group
        * Various Fixes
        * Show invocationCount per method
+       * Show timeout per method
        * 
 V2.3.1 * Links for Package Results
        * Remove sorting from run arguments page
